Fixed the alignment of subscribe button on home page

--- a/app/assets/stylesheets/homepage-header.css
+++ b/app/assets/stylesheets/homepage-header.css
@@ -934,7 +934,8 @@ a.accordion-toggle{
 .newsletter-subscribe-button{
     background: url("subscribe-email-btn.png") no-repeat;
     float: left;
-    width: 23%;
+    height: 55px;
+    width: 160px;
     text-indent: 267px;
     border: none;
 }
